--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="cache-control" content="no-cache" />
   <meta http-equiv="expires" content="0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css" />
   <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
   <!--[if lt IE9]>
@@ -24,13 +25,13 @@
 <body>
 <div id="wrap">
 <header>
-  <p id="openMenu"><a href="#"></a></p>
+  <h1 id="brand">Brand</h1>
+  <p id="openMenu"><a href="#"><img src="images/hambtn.png" alt="ボタン" width="30" height="auto" /></a></p>
 </header>
 <div id="content">
 
 </div><!-- /#content -->
 <footer>
-
 </footer>
 </div><!-- /#wrap -->
 </body>
