変更　フッターにコピーライト。タイトルをHamburgerに変更

--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 <body>
 <div id="wrap">
 <header>
-  <h1 id="brand">Brand</h1>
+  <h1 id="brand">Hamburger</h1>
   <p id="openMenu"><a href="#"><img src="images/hambtn.png" alt="ボタン" width="30" height="auto" /></a></p>
 </header>
 <div id="content">
 
 </div><!-- /#content -->
 <footer>
+  <p id="copy">Copyright&copy; 2017 Hamburger All Rights Reserved.</p>
 </footer>
 </div><!-- /#wrap -->
 </body>
