--- a/index.html
+++ b/index.html
@@ -16,11 +16,6 @@
   <meta http-equiv="expires" content="0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
   <link rel="stylesheet" href="css/style.css" />
-  <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-  <!--[if lt IE9]>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
 </head>
 <body>
 <div id="wrap">
@@ -35,5 +30,11 @@
   <p id="copy">Copyright&copy; 2017 Hamburger All Rights Reserved.</p>
 </footer>
 </div><!-- /#wrap -->
+<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
+<!--[if lt IE9]>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+<![endif]-->
+<script type="text/javascript" src="js/menu.js"></script>
 </body>
 </html>
