更新　ハンバーガーjquery作ったけど横スライド試したいので保留

--- a/index.html
+++ b/index.html
@@ -22,9 +22,67 @@
 <header>
   <h1 id="brand">Hamburger</h1>
   <p id="openMenu"><a href="#"><img src="images/hambtn.png" alt="ボタン" width="30" height="auto" /></a></p>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="#">Link</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 </header>
 <div id="content">
-
+<p>この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
+この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。</p>
 </div><!-- /#content -->
 <footer>
   <p id="copy">Copyright&copy; 2017 Hamburger All Rights Reserved.</p>
