--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+<div id="layer"></div>
 <div id="wrap">
 <header>
   <h1 id="brand">Hamburger</h1>
   <p id="openMenu"><a href="#"><img src="images/hambtn.png" alt="ボタン" width="30" height="auto" /></a></p>
-  <nav>
+  <nav id="global-menu">
+    <span id="close-btn">X</span>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
