追加　highlight.js

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta http-equiv="expires" content="0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" />
   <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/dracula.css">
 </head>
 <body>
 <div id="layer"></div>
@@ -35,56 +36,175 @@
   </nav>
 </header>
 <div id="content">
-<p>この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。
-この文章はダミーテキストです。文字サイズや行間などを確認するために入れています。これで50文字です。</p>
+<h3>html</h3>
+<pre><code class="html">
+  &lt;body>
+  &lt;div id="layer">&lt;/div>
+  &lt;div id="wrap">
+  &lt;header>
+    &lt;h1 id="brand">Hamburger&lt;/h1>
+    &lt;p id="openMenu">&lt;a href="#">&lt;img src="images/hambtn.png" alt="ボタン" width="30" height="auto" />&lt;/a>&lt;/p>
+    &lt;nav id="global-menu">
+      &lt;span id="close-btn">X&lt;/span>
+      &lt;ul>
+        &lt;li>&lt;a href="#">Home&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="#">About&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="#">News&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="#">Link&lt;/a>&lt;/li>
+        &lt;li>&lt;a href="#">Contact&lt;/a>&lt;/li>
+      &lt;/ul>
+    &lt;/nav>
+  &lt;/header>
+  &lt;div id="content">
+  ....
+  &lt;/div><!-- /#content -->
+  &lt;footer>&lt;/footer>
+  &lt;/div><!-- /#wrap -->
+  &lt;/body>
+</code></pre>
+
+<h3>css</h3>
+<pre><code class="css">
+  body{
+    position: relative;
+  }
+
+  #layer{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 1; /* ヘッダー・ボディーより手前に */
+    display: none;
+  }
+  /* ========================== */
+  /* ヘッダー              */
+  /* ========================== */
+  header{
+    width: 100%;
+    height: 80px;
+    background-color: #FC3666;
+    color: #fff;
+    position: fixed;
+    top: 0;
+    overflow-x: hidden; /* メニューが誤って表示されないように */
+  }
+
+  header h1, header p{
+    margin: 0;
+    padding: 0;
+  }
+
+  header h1#brand{
+    float: left;
+    margin: 10px 0 0 20px;
+    /*
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    */
+  }
+
+  header #openMenu{
+    float: right;
+    margin: 20px 20px 0 0;
+    /*
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    */
+  }
+
+  header nav#global-menu{
+    position: fixed;
+    top: 0;
+    right: -200px; /* 幅の分だけ隠す */
+    width: 200px;
+    height: 100%; /* 画面縦全部 */
+    background-color: #fff;
+  }
+
+  header nav#global-menu span#close-btn{
+    display: block;
+    width: 30px;
+    height: 20px;
+    color: #fff;
+    padding: 10px;
+    margin-bottom: 20px;
+    text-align: center;
+    background-color: #FC3666;
+    cursor: pointer;
+  }
+
+  header nav#global-menu ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  header nav#global-menu ul li{
+    padding: 10px;
+    border-bottom: 1px dotted #FC3666;
+  }
+
+  header nav#global-menu ul li a{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+  }
+
+  /* ========================== */
+  /* コンテンツ              */
+  /* ========================== */
+  #content{
+    padding: 80px 10px 10px;
+  }
+
+</code></pre>
+<h3>jQuery</h3>
+<pre><code>
+  $(document).ready(function(){
+    var toggleBtn = $('#openMenu'); // ボタン
+    var closeBtn = $('#close-btn');
+    var gMenu = $('#global-menu'); // グローバルメニュー
+    var body = $(document.body); // ボディ
+    var menuWidth = gMenu.outerWidth(); // メニュー幅
+    var layer = $('#layer'); // メニューを出したときのバックグラウンドレイヤー
+
+    toggleBtn.children('a').on('click', function(e){
+      e.preventDefault();
+      body.toggleClass('open');
+
+      if (body.hasClass('open')) {
+        body.animate({'right': menuWidth}, 300);
+        gMenu.animate({'right': 0}, 300);
+        layer.show();
+      }else{
+        body.animate({'right': 0}, 300);
+        gMenu.animate({'right': -menuWidth}, 300);
+        layer.hide();
+      }
+    });
+
+    layer.on('click', function(){
+      body.animate({'right': 0}, 300);
+      gMenu.animate({'right': -menuWidth}, 300);
+      layer.hide();
+      body.removeClass('open');
+    });
+
+    closeBtn.on('click', function(){
+      body.animate({'right': 0}, 300);
+      gMenu.animate({'right': -menuWidth}, 300);
+      layer.hide();
+      body.removeClass('open');
+    });
+  });
+
+</code></pre>
+
 </div><!-- /#content -->
 <footer>
   <p id="copy">Copyright&copy; 2017 Hamburger All Rights Reserved.</p>
@@ -96,5 +216,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 <![endif]-->
 <script type="text/javascript" src="js/menu.js"></script>
+<script src="js/highlight.js"></script>
+<script>hljs.initHighlightingOnLoad();</script>
 </body>
 </html>
